src.3/objects/Contract.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>pw_cc__BillingAddressStatus__c</fullName>
        <label>Billing Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__BillingCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__BillingStateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingAddressStatus__c</fullName>
        <label>Shipping Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
</CustomObject>